// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper text commands 1`] = `
"Usage

Required flags
   --nonverbose [boolean]

Optional flags
   --verbose [boolean]"
`;

exports[`Helper text creates helper text with descriptions 1`] = `
"CLI usage

do stuff with this CLI

Required flags
   --color [string]
   A color

   -p, --port [number]
   The port to listen on

Optional flags
   --UserId [string]

   -wa, --withAuth [boolean]
   Require authentication for this action

   -c, --config [string]
   The config file to use
"
`;

exports[`Helper text creates helper text with no descriptions 1`] = `
"Usage

Optional flags
   --id [string]

   --port [number]

   --withAuth [boolean]"
`;

exports[`Helper text file flag helper text only 1`] = `
"Usage

   --config [string]
"
`;

exports[`Helper text file flag helper text only 2`] = `
"Usage

   -c, --config [string]
"
`;

exports[`Helper text with decamelization and custom long flag 1`] = `
"Usage

Optional flags
   --color [string]

   --user-id [string]

   --with-auth [boolean]"
`;
